# LiteTTS

./: .env.cpu  .env.gpu  .gitignore  Dockerfile  LICENSE  LiteTTS_Comprehensive_System_Audit_Complete__2025-08-29T01-06-48.md  Makefile  Prelim_Task_List.md  README.md  Voice_Cloning_System_Testing_Complete__2025-09-10T05-06-47.md  app.py  audio_analysis.py  audio_pipeline_diagnosis.py  audio_quality_validation_report.json  audio_waveform_analysis.py  build-docker.sh  comprehensive_system_validation_report.py  config.json  debug_tokenization.py  deploy.sh  detailed_latency_audit_report.md  detailed_latency_audit_results.json  diagnose_model_inference.py  docker-compose.yml  end_to_end_audit_report.md  end_to_end_audit_results.json  final_audio_corruption_fix.py  fix_audio_corruption.py  fix_phonemization_pipeline.py  fix_tokenization_final.py  fix_tokenization_system.py  fix_voice_embedding_system.py  model_benchmark_results.json  model_inference_diagnosis_report.json  pyproject.toml  requirements.txt  startup.sh  test_audio_pipeline_diagnosis.py  test_audio_quality_validation.py  test_audio_quality_verification.py  (+7 more)
LiteTTS/: CONFIGURATION_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISSUES_RESOLUTION_SUMMARY.md  README.md  VOICE_MANAGEMENT_FIXES_SUMMARY.md  __init__.py  config.py  downloader.py  error_handling.py  exceptions.py  final_integration_test.py  hardware_optimizer.py  logging_config.py  models.py  patches.py  run_tests.py  start_server.py  startup.py  test_api_router.py  test_time_processing_validation.py  test_whisper_integration.py  validation.py
LiteTTS/api/: __init__.py  dashboard.py  dashboard_tts_optimizer.py  error_handler.py  progressive_response.py  response_formatter.py  router.py  validators.py  voice_cloning_router.py
LiteTTS/audio/: README.md  __init__.py  audio_segment.py  chunking.py  format_converter.py  optimized_processor.py  processor.py  progressive_generator.py  streaming.py  time_stretcher.py  voice_consistency.py  watermarking.py
LiteTTS/backends/: whisper_fallback_manager.py  whisper_optimized.py
LiteTTS/benchmarks/: accurate_performance_analysis.py  performance_analysis.py  performance_optimizations.py  quick_benchmark.py  run_all_benchmarks.py  run_benchmark.py  run_performance_regression_tests.py  whisper_alternatives_analysis.py
LiteTTS/cache/: __init__.py  audio_cache.py  cache_utils.py  intelligent_cache.py  intelligent_precaching.py  legacy.py  manager.py  preloader.py
LiteTTS/config/: README.md  __init__.py  backup_manager.py  config_manager.py  contractions.json  enhanced_pronunciation_config.json  environment_bridge.py  integrated_config_system.py  internal_config.py  numbers.json  openapi.json  pronunciation_overrides.json  robust_config_loader.py  setting_verification_system.py  symbols.json  whisper_config_loader.py  whisper_settings.json
LiteTTS/docs/: GGUF_INTEGRATION_COMPLETE.md  GGUF_INTEGRATION_FIX.md  GGUF_INTEGRATION_RESEARCH.md  GGUF_INTEGRATION_STATUS.md  Phase6_Implementation_Summary.md  comprehensive_deliverables_summary.md  whisper_alternatives_research.md
LiteTTS/examples/: enhanced_voice_cloning_demo.py  performance_benchmark.py  realtime_monitoring_demo.py
LiteTTS/inference/: __init__.py  base.py  factory.py  gguf_backend.py  gguf_backend_broken_backup.py  onnx_backend.py  ttscpp_backend.py
LiteTTS/metrics/: __init__.py  performance_logger.py
LiteTTS/middleware/: debug_middleware.py
LiteTTS/models/: __init__.py  manager.py  model_discovery_cache.json
LiteTTS/monitoring/: __init__.py  chunked_performance.py  health_monitor.py  rtf_monitor.py  whisper_performance_monitor.py
LiteTTS/nlp/: README.md  __init__.py  advanced_abbreviation_handler.py  advanced_currency_processor.py  advanced_phonetic_mapping.py  advanced_symbol_processor.py  audio_quality_enhancer.py  clean_text_normalizer.py  comma_fix_processor.py  context_adapter.py  contraction_pronunciation_fix.py  diphthong_fix_processor.py  dynamic_emotion_intonation.py  emotion_detector.py  enhanced_contraction_processor.py  enhanced_contraction_processor_v2.py  enhanced_datetime_processor.py  enhanced_homograph_resolver.py  enhanced_nlp_processor.py  enhanced_number_processor.py  enhanced_units_processor.py  espeak_enhanced_symbol_processor.py  espeak_phonemizer_backend.py  extended_pronunciation_dictionary.py  homograph_resolver.py  interjection_fix_processor.py  interjection_processor.py  llm_context_analyzer.py  naturalness_enhancer.py  phase6_contraction_processor.py  phase6_text_processor.py  phonetic_contraction_processor.py  phonetic_dictionary_manager.py  phonetic_processor.py  processor.py  pronunciation_dictionary.py  pronunciation_rules_processor.py  proper_name_pronunciation_processor.py  prosody_analyzer.py  rime_ai_integration.py  (+6 more)
LiteTTS/optimization/: hardware_detector.py
LiteTTS/performance/: __init__.py  batch_optimizer.py  cold_start_optimizer.py  config_hot_reload.py  (+14 more)
cache/: __init__.py
config/: Caddyfile  docker-compose.production.yml  model-presets.json  override.json.example  production.json  pyproject.toml  pytest.ini  settings.json
docs/: BENCHMARKING.md  BETA_FEATURES.md  CADDY_PROXY_CONFIGURATION.md  CHANGELOG.md  CHANGES_SINCE_WORKING_COMMIT.md  CONFIGURATION.md  CONTRIBUTIONS.md  DASHBOARD_CORRUPTION_INVESTIGATION.md  DEPENDENCIES.md  DEPLOYMENT.md  DOCKER_OPTIMIZATION.md  DYNAMIC_CPU_ALLOCATION.md  FEATURES.md  IMPROVEMENT_ROADMAP.bakv1.md  IMPROVEMENT_ROADMAP.md  MONITORING.md  PERFORMANCE.md  RELEASE_NOTES.md  ROADMAP.md  TASK_LIST_STATUS.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  VOICES.md  WATERMARKING.md  WINDOWS_COMPATIBILITY.md  configuration_fixes_summary.md  windows_compatibility_analysis.md
pipeline_diagnosis/: pipeline_diagnosis_report_2025-08-28_20-58-52.json
scripts/: model_benchmark.py  performance_benchmark.py  quick_model_test.py
test_audio_output/: audio_quality_report_2025-08-28_20-52-39.json  waveform_analysis_report_2025-08-28_20-55-23.json
validation_reports/: comprehensive_system_validation_2025-08-28_21-00-24.json
wip/: Caddyfile  Caddyfile.txt  docker-compose.yml  update.sh
(+494 files in other folders)
