[project]
name = "kokoro-onnx-tts-api"
version = "1.0.0"
description = "Lightweight, real-time TTS API using Kokoro ONNX with OpenWebUI compatibility"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colorlog==6.9.0",
    "csvw==3.5.1",
    "dlinfo==2.0.0",
    "espeakng-loader==0.2.4",
    "fastapi==0.116.1",
    "faster-whisper==1.2.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "kokoro-onnx==0.4.9",
    "language-tags==1.2.0",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "mutagen==1.47.0",
    "numpy==2.3.2",
    "onnxruntime==1.22.1",
    "packaging==25.0",
    "phonemizer-fork==3.3.2",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydub>=0.25.1",
    "pyparsing==3.2.3",
    "pytest>=8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-multipart>=0.0.20",
    "rdflib==7.1.4",
    "referencing==0.36.2",
    "regex==2025.7.34",
    "requests==2.32.4",
    "resemble-perth==1.0.1",
    "rfc3986==1.5.0",
    "rpds-py==0.27.0",
    "segments==2.3.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "starlette==0.47.2",
    "sympy==1.14.0",
    "torch>=2.8.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn[standard]==0.35.0",
    "watchdog==6.0.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
    "yarl==1.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[project.scripts]
kokoro-tts = "app:main"

# Note about the local editable install
# The line "-e file:///home/mkinney/Repos/kokoro_onnx_tts_api" cannot be directly
# included in pyproject.toml. You'll need to install this separately with:
# uv pip install -e /home/mkinney/Repos/kokoro_onnx_tts_api
